# leptos-tutorial

./: Cargo.toml  index.html
csr/: Cargo.toml  leptosfmt.toml
csr/src/: async_stuff.rs
src/: async_stuff.rs  main.rs
ssr/: Cargo.toml
templating/: Cargo.toml
templating/src/: main.rs
